# morsecode

./: README.md  engine.py  main.py  morse_code_dict.py  pyproject.toml  tkinter_gui.py  utils.py
tests/: test_converter.py
