[tool.poetry]
name = "morsecodeconverter"
version = "0.1.0"
description = ""
authors = ["paukstello <paukstelom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
